# Deal_hunter

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: config_layer_guide.md  data_models_guide.md  messaging_agent_guide.md  notification_service_guide.md  planning_agent_guide.md  rss_service_guide.md  scanner_agent_guide.md  ui_guide.md
error_docs/: Day2.excalidraw  errors.md  week1_errors.md
notebooks/: dummy.py  ensemble_agent.ipynb  modal_preprocessing.ipynb  rss_output.html  scanning.ipynb  test_rss_service.ipynb
notebooks/diagrams/: autonomous_planner.md  diagram_mermaid.md  services_flow.md
src/deal_hunter/: config.py  framework.py
src/deal_hunter/agents/: __init__.py  agent.py  autonomous_planner.py  ensemble.py  frontier.py  items.py  messaging.py  planner.py  scanner.py  scanner_example.py  specialist.py
src/deal_hunter/models/: __init__.py  deals.py
src/deal_hunter/services/: __init__.py  notifications.py  preprocessing.py  pricer.py  rss.py  testing.py
src/deal_hunter/ui/: app.py  log_formatter.py
